--- a/ProyectoIntro/plantillas/PSE_login.html
+++ b/ProyectoIntro/plantillas/PSE_login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,17 +32,17 @@
                     <h2 class="font-weight-bold">Iniciar Sesión</h2>
                 </div>
                 <div class = "card-body">
-                    <form>
+                    <form method = "POST">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                          <legend class="border_bottom mb-4"> Log In </legend>
+                          {{ form|crispy }}
+                        </fieldset>
                         <div class="form-group">
-                            <label for="Email">Correo Electrónico</label>
-                            <input type="email" class="form-control" id="Email">
+                          <button type="submit" class="btn btn-outline-info">
+                            Iniciar Sesión
+                          </button>
                         </div>
-                        <div class="form-group">
-                            <label for="Password">Password</label>
-                            <input type="password" class="form-control" id="Password">
-                            <a href="{% url 'forgotpassword' %}"><small class="form-text text-muted text-right" >¿Olvidó su contraseña?</small></a>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                     </form>
                 </div>
             </div>
