--- a/ProyectoIntro/plantillas/profesores/test.html
+++ b/ProyectoIntro/plantillas/profesores/test.html
@@ -1,51 +1,54 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width = device-width, initial.scale = 1.0">
+    <meta htpp-equiv = "X-UA-compatible" content = "ie-edge">
 
-    	<title>
-          test
-    	</title>
+    <title>Log In</title>
 
-      <link rel="stylesheet" href="{% static 'css/prueba_tabla.css' %}">
+    <!--FONTS-->
 
-	</head>
+    <link rel = "stylesheet" href = "{% static 'css/bootstrap.css' %}">
 
-	<body>
-    <div class="float-none">
-      <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
-      <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
+    <!-- Nuestro css-->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+    
+    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+</head>
+
+<body>
+
+    <div class = "row">
+        <div class = "col-lg-4 m-auto">
+            <div class = "card mt-4">
+                <div class = "card-title ml-4 mt-3">
+                    <h2 class="font-weight-bold">Iniciar Sesión</h2>
+                </div>
+                <div class = "card-body">
+                    <form method = "POST">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                          <legend class="border_bottom mb-4"> Log In </legend>
+                          {{ form|crispy }}
+                        </fieldset>
+                        <div class="form-group">
+                          <button type="submit" class="btn btn-outline-info">
+                            Iniciar Sesión
+                          </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
+</body>
 
-		<div class="table-responsive">
-    <table id="tablaAlumnos" class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
-      <thead>
-      	<th class="th-sm">Id</th>
-        <th class="th-sm">Nombre</th>
-        <th class="th-sm">Apellido</th>
-        <th class="th-sm">Curso</th>
-      </thead>
-      <tbody>
-
-      {% for estudiante in estudiantes %}
-          {% if estudiante.curso == "1A" %}
-          	<tr style="transform: rotate(0);">
-            	<th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
-            	<td>{{estudiante.nombres}}</td>
-            	<td>{{estudiante.apellidos}}</td>
-            	<td>{{estudiante.curso}}</td>
-          	</tr>
-          {% endif %}
-      {% endfor %}
-      </tbody>
-    </table>
-		</div>
-
-    <script src="{% static 'js/tabla.js' %}"></script>
-  </body>
+</html>
