--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
@@ -9,39 +9,42 @@
   
   <div class="row ml-3 mt-3">
     <div class="col-4">
-      <h1>Mis Ramos:</h1>
-      <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          {% for ramo in ramos %}
-          <form action="#" method="get">
-            <input type="submit" class="btn btn-secondary" value="{{ramo}}" name="seleccion">
-          </form>
+      <div class="jumbotron">
+        <h1 class="display-4">Mis Ramos:</h1>
+        <h5>Seleccione que ramo quiere ver:</h5>
+          <div class="btn-group btn-group-toggle" data-toggle="buttons">  
+              <form action="#" method="get">
+              {% for ramo in ramos %}
+                <label class="btn btn-primary">
+                  <input type="submit" class="btn btn-primary" value="{{ramo}}" name="seleccion">
+                </label>
+              {% endfor %}
+            </form>
+          </div>
+        <hr class="my-4">
+        <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
+          <h1 class="display-4">Mis Cursos:</h1>
+          <h5>Seleccione que curso quiere ver:</h5>
+          {% for curso in cursos %}
+            <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
           {% endfor %}
-      </div>
+        </div>
     </div>
   </div>
-  
-  <div class="row ml-3 mt-3">
-    <div class="col-4">
-      <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
+
+    <div class="col-8">
+      <div class="tab-content" id="nav-tabContent">
         {% for curso in cursos %}
-          <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
-        {% endfor %}
-      </div>
-    </div>
+        <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
 
-      <div class="col-8">
-        <div class="tab-content" id="nav-tabContent">
-          {% for curso in cursos %}
-          <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
+          <div class="float-none">
+            <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
+            <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
+          </div>
 
-            <div class="float-none">
-              <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
-              <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
-            </div>
+          <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
 
-            <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
-
-            <div class="table-responsive">
+          <div class="table-responsive">
             <table id="tablaAlumnos" class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
               <thead>
                 <th class="th-sm">Id</th>
@@ -51,7 +54,7 @@
               </thead>
               <tbody>
 
-              {% for estudiante in estudiantes %}
+                {% for estudiante in estudiantes %}
                   {% if estudiante.curso == curso.curso %}
                     <tr style="transform: rotate(0);">
                       <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
@@ -60,17 +63,16 @@
                       <td>{{estudiante.curso}}</td>
                     </tr>
                   {% endif %}
-              {% endfor %}
+                {% endfor %}
               </tbody>
             </table>
-            </div>
-
           </div>
-          {% endfor %}
-        </div>
-      </div>
-  </div>
 
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 
 </div>
 <link rel="stylesheet" href="{% static 'css/prueba_tabla.css' %}">
