--- a/ProyectoIntro/plantillas/profesores/test.html
+++ b/ProyectoIntro/plantillas/profesores/test.html
@@ -1,20 +1,17 @@
 
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Hello, Bootstrap Table!</title>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 
   <div class="container-fluid">
 
@@ -25,57 +22,78 @@
           <h5>Seleccione que ramo quiere ver:</h5>
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
                 <form action="#" method="get">
-                  {% for ramo in ramos %}
+                {% for ramo in ramos %}
                   <label class="btn btn-primary">
                     <input type="submit" class="btn btn-primary" value="{{ramo}}" name="seleccion">
                   </label>
-                  {% endfor %}
-                </form>
-              </div>
-              <hr class="my-4">
-              <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
-                <h1 class="display-4">Mis Cursos:</h1>
-                <h5>Seleccione que curso quiere ver:</h5>
-                {% for curso in cursos %}
-                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
                 {% endfor %}
-              </div>
+              </form>
             </div>
+          <hr class="my-4">
+          <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
+            <h1 class="display-4">Mis Cursos:</h1>
+            <h5>Seleccione que curso quiere ver:</h5>
+            {% for curso in cursos %}
+              <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
+            {% endfor %}
           </div>
+      </div>
+    </div>
 
-          <div class="col-8">
-            <table
-            data-toggle="table"
-            data-url="data1.json"
-            data-pagination="true"
-            data-search="true">
-            <thead>
-              <tr>
-                <th data-sortable="true" data-field="id">Item ID</th>
-                <th data-field="name">Item Name</th>
-                <th data-field="price">Item Price</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Item 1</td>
-                <td>$1</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Item 2</td>
-                <td>$2</td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="col-8">
+        <div class="tab-content" id="nav-tabContent">
+          {% for curso in cursos %}
+          <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
+
+            <div class="float-none">
+              <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
+              <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
+            </div>
+
+            <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
+            <div class="table-responsive">
+              <table  class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
+                <thead>
+                  <th class="th-sm">Id</th>
+                  <th class="th-sm">Nombre</th>
+                  <th class="th-sm">Apellido</th>
+                  <th class="th-sm">Curso</th>
+                </thead>
+
+                <tbody id="tablaAlumnos">
+                  {% for estudiante in estudiantes %}
+
+                      <tr style="transform: rotate(0);">
+                        <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
+                        <td>{{estudiante.nombres}}</td>
+                        <td>{{estudiante.apellidos}}</td>
+                        <td>{{estudiante.curso}}</td>
+                      </tr>
+
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
+
+          </div>
+          {% endfor %}
         </div>
       </div>
-
     </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
+
+  </div>
+
+<script>
+$(document).ready(function(){
+  $("#filtro").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#tablaAlumnos tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
+
+
 </body>
 </html>
